force-app/main/default/objects/DataImport__c/fields/Recurring_Donation_Name__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Donation_Name__c</fullName>
    <description>Leave blank if you have a Recurring Donation Name Format selected. Otherwise, enter your own name.</description>
    <inlineHelpText>Leave blank if you have a Recurring Donation Name Format selected. Otherwise, enter your own name.</inlineHelpText>
    <label>Recurring Donation Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>