force-app/main/default/objects/DataImport__c/fields/Recurring_Donation_Status__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Donation_Status__c</fullName>
    <description>Indicates if this Recurring Donation is actively in use, temporarily suspended, or closed.</description>
    <inlineHelpText>Indicates if this Recurring Donation is actively in use, temporarily suspended, or closed.</inlineHelpText>
    <label>Recurring Donation Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>