force-app/main/default/objects/DataImport__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The status of the import for this record, for example, Imported or Failed.</description>
    <inlineHelpText>The status of the import for this record, for example, Imported or Failed.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready To Process</fullName>
                <label>Ready to Process</label>
            </value>
            <value>
                <fullName>Imported</fullName>
            </value>
            <value>
                <fullName>Dry Run - Validated</fullName>
            </value>
            <value>
                <fullName>Dry Run - Error</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>