force-app/main/default/objects/DataImport__c/fields/UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign__c</fullName>
    <description>Google Analytics tracking for the name or solicitation code of the outreach effort. For example, spring_2021_fundraiser.</description>
    <inlineHelpText>Google Analytics tracking for the name or solicitation code of the outreach effort. For example, spring_2021_fundraiser.</inlineHelpText>
    <label>UTM Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>