force-app/main/default/objects/DataImport__c/fields/UTM_Content__c.field-meta.xml
<CustomField>
    <fullName>UTM_Content__c</fullName>
    <description>Google Analytics tracking to differentiate similar content or links within a solicitation.</description>
    <inlineHelpText>Google Analytics tracking to differentiate similar content or links within a solicitation.</inlineHelpText>
    <label>UTM Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>