force-app/main/default/objects/DataImport__c/fields/UTM_Keyword_Terms__c.field-meta.xml
<CustomField>
    <fullName>UTM_Keyword_Terms__c</fullName>
    <description>Google Analytics tracking for paid search terms.</description>
    <inlineHelpText>Google Analytics tracking for paid search terms.</inlineHelpText>
    <label>UTM Keyword Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>