force-app/main/default/objects/DataImport__c/fields/UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium__c</fullName>
    <description>Google Analytics tracking for how the URL was shared. For example, email or banner_ad.</description>
    <inlineHelpText>Google Analytics tracking for how the URL was shared. For example, email or banner_ad.</inlineHelpText>
    <label>UTM Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>