force-app/main/default/objects/DataImport__c/fields/UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source__c</fullName>
    <description>Google Analytics tracking for the referring source. For example, website or newsletter.</description>
    <inlineHelpText>Google Analytics tracking for the referring source. For example, website or newsletter.</inlineHelpText>
    <label>UTM Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>