force-app/main/default/objects/DataImport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>FailureInformation__c</columns>
    <columns>Contact1_Firstname__c</columns>
    <columns>Contact1_Lastname__c</columns>
    <columns>Account1_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>