force-app/main/default/objects/DataImport__c/listViews/Dry_Run_Validated.listView-meta.xml
<ListView>
    <fullName>Dry_Run_Validated</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>FailureInformation__c</columns>
    <columns>Contact1_Firstname__c</columns>
    <columns>Contact1_Lastname__c</columns>
    <columns>Account1_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Dry Run - Validated</value>
    </filters>
    <label>Dry Run - Validated</label>
    <language>en_US</language>
</ListView>