force-app/main/default/objects/DataImport__c/listViews/To_Be_Imported.listView-meta.xml
<ListView>
    <fullName>To_Be_Imported</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>FailureInformation__c</columns>
    <columns>Contact1_Firstname__c</columns>
    <columns>Contact1_Lastname__c</columns>
    <columns>Account1_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Imported</value>
    </filters>
    <label>To Be Imported</label>
</ListView>